examples/test/testpolicy4822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4822
  namespace: namespace233
spec:
  podSelector:
    matchLabels:
      key6: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value29
          key32: value10
      podSelector:
        matchLabels:
          key43: value28
          key24: value41
